Small wording change

--- a/blog/_posts/2021-08-05-akka-http-10.2.6-released.md
+++ b/blog/_posts/2021-08-05-akka-http-10.2.6-released.md
@@ -10,7 +10,7 @@ tags: [releases]
 Dear hakkers,
 
 We are happy to announce the 10.2.6 release of Akka HTTP. This release fixes a critical bug in HTTP/2 ([#3890](https://github.com/akka/akka-http/issues/3890))
-which was introduced in [Akka HTTP 10.2.5](2021-07-27-akka-http-10.2.5-released.md).
+which was found in [Akka HTTP 10.2.5](2021-07-27-akka-http-10.2.5-released.md).
 
 ## Credits
 
