add notice about deserialization error for new RegionStopped message

--- a/blog/_posts/2021-08-19-akka-2.6.16-released.md
+++ b/blog/_posts/2021-08-19-akka-2.6.16-released.md
@@ -31,6 +31,10 @@ Database specific implementations have so far been added to the [JDBC 5.0.2](htt
 
 The API will be marked "may change" for a few patch releases before we declare it final. Take it for a spin and let us know what you think!
 
+## Rolling upgrades
+
+This release includes a new Akka Cluster Sharding internal message that is used whenever a shard region is terminated (see [#30402](https://github.com/akka/akka/pull/30402)). If you run a rolling upgrade, you might see deserialization warnings for message `RegionStopped` in the logs of the oldest node (the one holding the shard coordinator). It's safe to ignore those warnings during the upgrade.
+
 ## Credits
 
 For this release we had the help of 23 committers – thank you all very much!
