Corrected attribution for #29994 to @eyalfa

--- a/blog/_posts/2021-10-15-akka-2.6.17-released.md
+++ b/blog/_posts/2021-10-15-akka-2.6.17-released.md
@@ -19,7 +19,7 @@ We are pleased to announce a new patch release of Akka 2.6. Noteworthy additions
  * Handle null for StatusReply, [#30728](https://github.com/akka/akka/pull/30728)
  * Log warning then error for "The ShardCoordinator was unable to update a distributed state", thanks to [@muskan3006](https://github.com/muskan3006), [#30608](https://github.com/akka/akka/issues/30608)
  * Use more apidoc links and fix broken links in documentation, thanks to [@Captain1653](https://github.com/Captain1653)
- * Give BehaviorTestKit-spawned actors access to a real configuration, thanks to [@leviramsey](https://github.com/leviramsey), [#29994](https://github.com/akka/akka/issues/29994)
+ * Give BehaviorTestKit-spawned actors access to a real configuration, thanks to [@eyalfa](https://github.com/eyalfa), [#29994](https://github.com/akka/akka/issues/29994)
  * Use internalLogger instead of context.log for recovery logging, thanks to [@an-tex](https://github.com/an-tex), [#30563](https://github.com/akka/akka/pull/30563)
  * Fix issue with javadsl for PersistenceTestKit, [#30748](https://github.com/akka/akka/pull/30748)
  * Hardening of tests due to (or thanks to) change of CI tool
