remove link to Scalafiddle
It might be gone for good: https://github.com/scalafiddle/scalafiddle-io/issues/57

--- a/blog/_posts/2018-08-24-akka-2.5.15-released.md
+++ b/blog/_posts/2018-08-24-akka-2.5.15-released.md
@@ -12,7 +12,7 @@ Dear hakkers,
 We are pleased to announce a new patch release of Akka 2.5. Some notable improvements and bug fixes in 2.5.15 are:
 
 - Support joining from Cluster node of version 2.5.9 or earlier to Cluster node of version 2.5.15 [#25491](https://github.com/akka/akka/issues/25491)
-- Improved [ScalaFiddle](https://scalafiddle.io) integration in documentation, see [Akka Streams example](https://doc.akka.io/docs/akka/current/stream/stream-quickstart.html#browser-embedded-example) [#25431](https://github.com/akka/akka/pull/25431), thanks to [@andreaTP](https://github.com/andreaTP)
+- Improved ScalaFiddle integration in documentation, see [Akka Streams example](https://doc.akka.io/docs/akka/current/stream/stream-quickstart.html#browser-embedded-example) [#25431](https://github.com/akka/akka/pull/25431), thanks to [@andreaTP](https://github.com/andreaTP)
 - Improvements of async-dns [#25451](https://github.com/akka/akka/issues/25451) and [#25454](https://github.com/akka/akka/issues/25454)
 - New `Sink.takeLast` operator [#25322](https://github.com/akka/akka/issues/25322) thanks to [@naferx](https://github.com/naferx)
 
