mention parser combinators dependency is dropped in 2.6.19 (#848)

--- a/blog/_posts/2022-03-21-akka-2.6.19-released.md
+++ b/blog/_posts/2022-03-21-akka-2.6.19-released.md
@@ -27,7 +27,23 @@ We are excited to announce a new patch release of Akka 2.6. Noteworthy additions
  * Update scala-library to 2.13.8
  * Update typesafe config to 1.4.2
  * Update shaded protobuf version to 3.16.1 for DoS fix, [#31069](https://github.com/akka/akka/issues/31069)
- 
+
+## Dropped transitive dependency on `scala-parser-combinators`
+
+Previously, `akka-stream` contained a transitive dependency on `scala-parser-combinators`
+version 1.1.2. Thanks to the contributions by [@wsargent](https://github.com/wsargent)
+([#302](https://github.com/lightbend/ssl-config/pull/302)),
+[@SethTisue](https://github.com/SethTisue) ([#316](https://github.com/lightbend/ssl-config/pull/316))
+[@takayahilton](https://github.com/takayahilton) ([#30871](https://github.com/akka/akka/pull/30871))
+and [@mkurz](https://github.com/mkurz) ([#31046](https://github.com/akka/akka/pull/31046))
+this transitive dependency has now been dropped. This has the advantage that downstream projects
+no longer need to include `scala-parser-combinators`, and when they do, they are now free to pick
+either version 1.x or 2.x.
+
+If you were using `scala-parser-combinators` in your project, but were relying on the
+transitive dependency coming in from `akka-streams`, you will have to add an explicit
+dependency to `scala-parser-combinators` to your project from Akka 2.6.19 onwards.
+
 2.6.19 includes 99 closed issues. The complete list can be found on the [2.6.19 milestone](https://github.com/akka/akka/milestone/180?closed=1) on github.
 
 ## Credits
