Fix: accidentally nested bulletlist removed

--- a/blog/_posts/2022-09-06-akka-http-10.2.10-released.md
+++ b/blog/_posts/2022-09-06-akka-http-10.2.10-released.md
@@ -18,7 +18,7 @@ We are happy to announce the 10.2.10 release of Akka HTTP. This release contains
 * Allow zero max-content-length [#3903](https://github.com/akka/akka-http/pull/3903)
 * Fix for Uri.collapseDotSegments failing on some relative paths [#2507](https://github.com/akka/akka-http/pull/2507)
 * Allow custom verifier in Credentials.Provided [#4146](https://github.com/akka/akka-http/pull/4146)
-* * Make `toStrictEntity` fail with bad request in case of entity errors [#4135](https://github.com/akka/akka-http/pull/4135)
+* Make `toStrictEntity` fail with bad request in case of entity errors [#4135](https://github.com/akka/akka-http/pull/4135)
 * HTTP/2: When connection is aborted due to completion timeout, abort ongoing substreams (on Akka 2.6) [#4062](https://github.com/akka/akka-http/pull/4062)
 
 ## Credits
