Remove "Akka Platform" as a concept (#859)
* Avoid redirects
* Update index page

--- a/blog/_posts/2019-04-04-alpakka-1.0-is-here.md
+++ b/blog/_posts/2019-04-04-alpakka-1.0-is-here.md
@@ -54,22 +54,22 @@ With its wide span of different technologies, Alpakka depends on contributors wi
 
 [Lightbend](https://www.lightbend.com/) sponsors Alpakka and encourages contributions from the active community. 
 
-If you already have a [Lightbend Platform Subscription](https://www.lightbend.com/akka-platform#subscription), please reach out to the Expert Support via [Lightbend Portal](https://portal.lightbend.com/account/login).
+If you already have a [Lightbend Platform Subscription](https://www.lightbend.com/akka#subscription), please reach out to the Expert Support via [Lightbend Portal](https://portal.lightbend.com/account/login).
 
 For community support please ask questions or discuss ideas in the [Lightbend discuss forum](https://discuss.akka.io/).
 
 For professional support, for instance if you need faster response times, [Lightbend](https://www.lightbend.com/) provides:
 
-- [Lightbend Platform Subscription](https://www.lightbend.com/akka-platform#subscription), which includes Expert Support
-- [Learning Resources](https://www.lightbend.com/akka-platform/resources)
-- [Training](https://www.lightbend.com/akka-platform/services)
-- [Consulting](https://www.lightbend.com/akka-platform/services)
+- [Lightbend Platform Subscription](https://www.lightbend.com/akka#subscription), which includes Expert Support
+- [Learning Resources](https://www.lightbend.com/akka/resources)
+- [Training](https://www.lightbend.com/akka/services)
+- [Consulting](https://www.lightbend.com/akka/services)
 
 From version 1.0.0 on the official support covers
 
 * Alpakka CSV
 * Alpakka Couchbase 
-* Alpakka Kafka (support included in [Lightbend Platform Subscription](https://www.lightbend.com/akka-platform#subscription) covers support since version 0.16)
+* Alpakka Kafka (support included in [Lightbend Platform Subscription](https://www.lightbend.com/akka#subscription) covers support since version 0.16)
 
 Lightbend puts pride in trying to assist you with the other Alpakka modules on a best-effort basis.
 
