--- a/blog/_posts/2021-08-31-akka-grpc-2.1.0-released.md
+++ b/blog/_posts/2021-08-31-akka-grpc-2.1.0-released.md
@@ -112,7 +112,7 @@ For this release we had the help of 13 contributors – thank you all very much!
 | [<img width="20" alt="eugeniyk" src="https://avatars.githubusercontent.com/u/3932426?v=4&amp;s=40"/> **eugeniyk**](https://github.com/eugeniyk) | 1 | 2 | 2 |
 | [<img width="20" alt="thesamet" src="https://avatars.githubusercontent.com/u/307373?v=4&amp;s=40"/> **thesamet**](https://github.com/thesamet) | 1 | 2 | 0 |
 
-The Akka core team is employed by [Lightbend](https://www.lightbend.com/). If you're looking [to take your Akka systems to the next level](https://www.lightbend.com/akka-platform#subscription), let's [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
+The Akka core team is employed by [Lightbend](https://www.lightbend.com/). If you're looking [to take your Akka systems to the next level](https://www.lightbend.com/akka#subscription), let's [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
 
 
 Happy hakking!
