--- a/blog/_posts/2019-08-09-akka-2.5.24-released.md
+++ b/blog/_posts/2019-08-09-akka-2.5.24-released.md
@@ -39,7 +39,7 @@ commits  added  removed
       1      1        1 Corey Auger
 ```
 
-Thanks to [Lightbend](https://www.lightbend.com/) for their continued sponsorship of the Akka core team's efforts. Lightbend [offers commercial support](https://www.lightbend.com/akka-platform#subscription) for Akka.
+Thanks to [Lightbend](https://www.lightbend.com/) for their continued sponsorship of the Akka core team's efforts. Lightbend [offers commercial support](https://www.lightbend.com/akka#subscription) for Akka.
 
 Happy hakking!
 
