--- a/blog/_posts/2019-08-20-akka-2.5.25-released.md
+++ b/blog/_posts/2019-08-20-akka-2.5.25-released.md
@@ -27,7 +27,7 @@ commits  added  removed
       1      1        1 Johannes Rudolph
 ```
 
-Thanks to [Lightbend](https://www.lightbend.com/) for their continued sponsorship of the Akka core team's efforts. Lightbend [offers commercial support](https://www.lightbend.com/akka-platform#subscription)
+Thanks to [Lightbend](https://www.lightbend.com/) for their continued sponsorship of the Akka core team's efforts. Lightbend [offers commercial support](https://www.lightbend.com/akka#subscription)
 for Akka.
 
 Happy hakking!
