--- a/blog/_posts/2020-04-30-akka-2.6.5-released.md
+++ b/blog/_posts/2020-04-30-akka-2.6.5-released.md
@@ -66,7 +66,7 @@ commits  added  removed
       1      1        1 Christophe De Troyer
 ```
 
-The Akka core team is employed by [Lightbend](https://www.lightbend.com/). If you're looking [to take your Akka systems to the next level](https://www.lightbend.com/akka-platform#subscription), let's [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
+The Akka core team is employed by [Lightbend](https://www.lightbend.com/). If you're looking [to take your Akka systems to the next level](https://www.lightbend.com/akka#subscription), let's [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
 
 Happy hakking!
 
