--- a/blog/_posts/2020-04-30-alpakka-2.0.0-released.md
+++ b/blog/_posts/2020-04-30-alpakka-2.0.0-released.md
@@ -71,7 +71,7 @@ Future releases of Alpakka (starting with 2.1.0) will require Akka 2.6 and won't
 
 ## Akka by Lightbend
 
-The Akka core team is employed by [Lightbend](https://www.lightbend.com/). If you’re looking [to take your Akka systems to the next level](https://www.lightbend.com/akka-platform#subscription), let’s [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
+The Akka core team is employed by [Lightbend](https://www.lightbend.com/). If you’re looking [to take your Akka systems to the next level](https://www.lightbend.com/akka#subscription), let’s [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
 
 Happy hakking,
 Your Alpakkas
