--- a/blog/_posts/2020-09-09-akka-2.6.9-released.md
+++ b/blog/_posts/2020-09-09-akka-2.6.9-released.md
@@ -67,7 +67,7 @@ commits  added  removed
       1      1        1 James Mulcahy
 ```
 
-[Lightbend](https://www.lightbend.com/) employs the Akka core team. If you're looking [to take your Akka systems to the next level](https://www.lightbend.com/akka-platform#subscription), let's [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
+[Lightbend](https://www.lightbend.com/) employs the Akka core team. If you're looking [to take your Akka systems to the next level](https://www.lightbend.com/akka#subscription), let's [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
 
 Happy hakking!
 
