--- a/blog/_posts/2021-02-08-akka-grpc-1.1.0-released.md
+++ b/blog/_posts/2021-02-08-akka-grpc-1.1.0-released.md
@@ -22,7 +22,7 @@ information about when to use gRPC as your transport.
 
 This module is now officially
 [Supported](https://developer.lightbend.com/docs/introduction/getting-help/support-terminology.html)
-as part of a [Lightbend Subscription](https://www.lightbend.com/akka-platform#subscription).
+as part of a [Lightbend Subscription](https://www.lightbend.com/akka#subscription).
 
 
 ## Changes since 1.0.x
@@ -52,7 +52,7 @@ Commits Added Removed Author
     1       4       2 Tao Wenzhi
 ```
 
-The Akka core team is employed by [Lightbend](https://www.lightbend.com/). If you're looking [to take your Akka systems to the next level](https://www.lightbend.com/akka-platform#subscription), let's [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
+The Akka core team is employed by [Lightbend](https://www.lightbend.com/). If you're looking [to take your Akka systems to the next level](https://www.lightbend.com/akka#subscription), let's [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
 
 
 Happy hakking!
