--- a/blog/_posts/2021-05-26-akka-grpc-2.0.0-released.md
+++ b/blog/_posts/2021-05-26-akka-grpc-2.0.0-released.md
@@ -97,7 +97,7 @@ For this release we had the help of 11 contributors – thank you all very much!
 | [<img width="20" alt="ihostage" src="https://avatars.githubusercontent.com/u/817328?v=4&amp;s=40"/> **ihostage**](https://github.com/ihostage) | 1 | 13 | 1 |
 | [<img width="20" alt="ennru" src="https://avatars.githubusercontent.com/u/458526?v=4&amp;s=40"/> **ennru**](https://github.com/ennru) | 1 | 6 | 3 |
 
-The Akka core team is employed by [Lightbend](https://www.lightbend.com/). If you're looking [to take your Akka systems to the next level](https://www.lightbend.com/akka-platform#subscription), let's [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
+The Akka core team is employed by [Lightbend](https://www.lightbend.com/). If you're looking [to take your Akka systems to the next level](https://www.lightbend.com/akka#subscription), let's [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
 
 
 Happy hakking!
