--- a/blog/_posts/2021-08-05-akka-http-10.2.6-released.md
+++ b/blog/_posts/2021-08-05-akka-http-10.2.6-released.md
@@ -18,7 +18,7 @@ The complete list of closed issues can be found on the [10.2.6](https://github.c
 
 ## Akka by Lightbend
 
-The Akka core team is employed by [Lightbend](https://www.lightbend.com/). If you’re looking [to take your Akka systems to the next level](https://www.lightbend.com/akka-platform#subscription), let’s [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
+The Akka core team is employed by [Lightbend](https://www.lightbend.com/). If you’re looking [to take your Akka systems to the next level](https://www.lightbend.com/akka#subscription), let’s [set up a time](https://www.lightbend.com/contact) to discuss our enterprise-grade expert support, self-paced education courses, and technology enhancements that help you manage, monitor and secure your Akka systems - from development to production.
 
 Happy hakking!
 
