--- a/blog/_posts/2022-10-26-akka-22.10-released.md
+++ b/blog/_posts/2022-10-26-akka-22.10-released.md
@@ -92,7 +92,7 @@ In Alpakka:
 
 * Change default dispatcher for Akka Persistence plugins. It was by default a pinned dispatcher and is now the ordinary default dispatcher, but most plugins override this setting themselves anyway.
 
-* Possibility to define stash capacity per `EventSourcesBehavior` / `DurableStateBehavior` to override the global config.
+* Possibility to define stash capacity per `EventSourcedBehavior` / `DurableStateBehavior` to override the global config.
 
 ## Dependency updates
 
