Updated two small typo's (#866)
Co-authored-by: Shawn Downs <shawn@reactiveblue.com>

--- a/blog/_posts/2022-10-26-akka-22.10-released.md
+++ b/blog/_posts/2022-10-26-akka-22.10-released.md
@@ -47,11 +47,11 @@ The noteworthy features are:
 
 * Official support for Java 17. Java 8 and 11 are also supported.
 
-* Offical support for Scala 3.1 for Akka core. Scala 2.12 and 2.13 are also supported.
+* Official support for Scala 3.1 for Akka core. Scala 2.12 and 2.13 are also supported.
 
 ## Security Updates
 
-We run automated security vulnerability and license policy scanning of dependencies. Several dependencies have been updated to fix security vulnerabilities and keep up with latest improvements. Fortify SCA scan has also been performed without detecting any vulnerabilites.
+We run automated security vulnerability and license policy scanning of dependencies. Several dependencies have been updated to fix security vulnerabilities and keep up with latest improvements. Fortify SCA scan has also been performed without detecting any vulnerabilities.
 
 The following CVE's are addressed in this build.
 
